...
  {'Sulfitt': 'sulfitt'},
];

const List<String> deliveryList = ['Levering til butikk', 'Levering på posten'];

const List<Map<String, String>> mainCategoryList = [
  {'Øl': 'øl'},
  {'Mjød': 'mjød'},
  {'Sider': 'sider'},
];

const List<Map<String, String>> packageTypeList = [
  {'Flaske': 'bottle'},
...
